[package]
name = "jones-project"
version = "0.1.0"
edition = "2021"
default-run = "main"
[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
clap_derive = "4.5.3"
csv = "1.3.0"
env_logger = {version ="0.11.3"}
fastrand = "2.0.1"
fastrand-contrib = "0.1.0"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
